Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-7945

nested @if/@else in wizard preprocessor not recognized?

XMLWordPrintable

    • 0a9fa88e443f4b7ef76d98b39575a1b3c212eda5

      I have a custom template wizard that uses nested @if conditions, here is an example:

      @if "%PIMPL%" == "true"
      private:
      @if "%Internal%" == "true"
          Internal::%ClassName:c%Private *d;
      @else
          %ClassName:c%Private *d;
      @endif
      @endif
      

      The output when the "PIMPL" in the wizard is checked and "Internal" is unchecked (for a TestClass ClassName:

          Internal::TestClassPrivate *d;
      

      This should not happen as the whole "PIMPL" block should be deactivated.

        1. test_if.7z
          0.6 kB
          Christian Gonzalez
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            droetker Christian Gonzalez
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes