template wizard corrections

there are still bugs in the e.g. PIMPL wizard. It seems that there is a
bug in the QtCreator template preprocessor that prevents some nested if
statements. Issue created:
https://bugreports.qt-project.org/browse/QTCREATORBUG-7945